--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
               <a href="#"><font color="#7b5dff">Features</font></a>&nbsp;&nbsp;
               <a href="#"><font color="#7b5dff">Learn</font></a>&nbsp;&nbsp;
               <a href="#"><font color="#7b5dff">Join</font></a>&nbsp;&nbsp;
-              <a href="#"><font color="#7b5dff">Login</font></a>&nbsp;&nbsp;
-              <button style="background-color:#7b5dff; color:#ffffff; border:none; padding:10px 20px; border-radius:4px; cursor:pointer;">Register Now</button>
+              <a href="form.html"><font color="#7b5dff">Login</font></a>&nbsp;&nbsp;
+             <a href="newform.html" <button style="background-color:#7b5dff; color:#ffffff; border:none; padding:10px 20px; border-radius:4px; cursor:pointer;">Register Now</button>
             </td>
           </tr>
         </table>
