--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
             <input type="password"  id="pass" placeholder="password"><br><br>
             <button> Login</button>
 
-            <h3>Not registered yet? <a href="reg.html" target="_blank">Create new account</a></h3>
+            <h3>Not registered yet? <a href="newform.html" target="_blank">Create new account</a></h3>
             <h3>Forget Password</h3>
              <button> Reset password</button> 
     
